--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,31 +7,14 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-    <com.google.android.material.textfield.TextInputLayout
-        android:layout_width="409dp"
-        android:layout_height="wrap_content"
-        tools:layout_editor_absoluteX="1dp"
-        tools:layout_editor_absoluteY="179dp"
-        tools:ignore="MissingConstraints">
-
-    </com.google.android.material.textfield.TextInputLayout>
-
-    <com.google.android.material.textfield.TextInputEditText
-        android:layout_width="280dp"
-        android:layout_height="48dp"
-        android:hint="@string/Enter_text"
-        tools:layout_editor_absoluteX="24dp"
-        tools:layout_editor_absoluteY="274dp"
-        tools:ignore="MissingConstraints" />
-
     <Button
         android:id="@+id/button"
         android:layout_width="91dp"
         android:layout_height="48dp"
         android:text="@string/save_button"
+        tools:ignore="MissingConstraints"
         tools:layout_editor_absoluteX="304dp"
-        tools:layout_editor_absoluteY="274dp"
-        tools:ignore="MissingConstraints" />
+        tools:layout_editor_absoluteY="274dp" />
 
     <Button
         android:id="@+id/button2"
@@ -46,8 +29,17 @@
         android:id="@+id/spinner"
         android:layout_width="370dp"
         android:layout_height="48dp"
+        android:entries="@array/theme_options"
         tools:ignore="MissingConstraints"
         tools:layout_editor_absoluteX="25dp"
         tools:layout_editor_absoluteY="334dp" />
+
+    <com.google.android.material.textfield.TextInputEditText
+        android:layout_width="280dp"
+        android:layout_height="48dp"
+        android:hint="@string/Enter_text"
+        tools:ignore="MissingConstraints"
+        tools:layout_editor_absoluteX="24dp"
+        tools:layout_editor_absoluteY="274dp" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
