--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,6 +5,7 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:theme="@style/Base.Theme.MyApplication"
     tools:context=".MainActivity">
 
     <Spinner
@@ -14,12 +15,10 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="32dp"
         android:layout_marginEnd="16dp"
-        android:entries="@array/theme_options"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/inputText"
-        tools:ignore="NotSibling" />
+        app:layout_constraintTop_toBottomOf="@id/inputText" />
 
     <Button
         android:id="@+id/saveButton"
