--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,5 @@
     <color name="white">#FFFFFFFF</color>
     <color name="Yellow">#ebbe4d</color>
     <color name="blue">#60697c</color>
+    <color name="white2">#ffffff</color>
 </resources>
